Change to fetch and the modeling method

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/appWeather.js"></script>
-    <script src="js/weatherClass.js"></script>
+    <script type="module" defer  src="js/appWeather.js"></script>
 </head>
 
 <body>
